--- a/package.json
+++ b/package.json
@@ -14,25 +14,26 @@
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "1.4.6",
-    "dotenv": "16.0.3",
-    "express": "4.18.2",
+    "dotenv": "16.4.5",
+    "express": "4.21.0",
     "http-errors": "2.0.0",
     "morgan": "1.10.0",
-    "winston": "3.9.0"
+    "winston": "3.15.0"
   },
   "devDependencies": {
-    "@types/cookie-parser": "1.4.3",
-    "@types/debug": "4.1.8",
-    "@types/express": "4.17.17",
-    "@types/http-errors": "2.0.1",
-    "@types/morgan": "1.9.4",
-    "@typescript-eslint/eslint-plugin": "5.59.7",
-    "eslint": "8.41.0",
-    "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-prettier": "4.2.1",
-    "nodemon": "2.0.22",
-    "prettier": "2.8.8",
-    "ts-node": "10.9.1",
-    "typescript": "5.0.4"
+    "@types/cookie-parser": "1.4.7",
+    "@types/debug": "4.1.12",
+    "@types/express": "5.0.0",
+    "@types/http-errors": "2.0.4",
+    "@types/morgan": "1.9.9",
+    "@typescript-eslint/eslint-plugin": "8.8.1",
+    "eslint": "9.12.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "nodemon": "3.1.7",
+    "prettier": "3.3.3",
+    "ts-node": "10.9.2",
+    "typescript": "5.6.2",
+    "yarn-upgrade-all": "0.7.4"
   }
 }
