--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Data exchange service rest api",
   "main": "index.js",
+  "engines": {
+    "node": "18"
+  },
   "scripts": {
     "start": "node ./dist/app.js",
     "dev": "nodemon src/app.ts",
@@ -13,19 +16,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "5.1.1",
     "cookie-parser": "1.4.6",
     "dotenv": "16.4.5",
     "express": "4.21.0",
     "http-errors": "2.0.0",
+    "joi": "17.13.3",
+    "jsonwebtoken": "9.0.2",
     "morgan": "1.10.0",
+    "uuid": "10.0.0",
     "winston": "3.15.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "5.0.2",
     "@types/cookie-parser": "1.4.7",
     "@types/debug": "4.1.12",
     "@types/express": "5.0.0",
     "@types/http-errors": "2.0.4",
+    "@types/jsonwebtoken": "9.0.7",
     "@types/morgan": "1.9.9",
+    "@types/node": "22.7.5",
+    "@types/uuid": "10.0.0",
     "@typescript-eslint/eslint-plugin": "8.8.1",
     "eslint": "9.12.0",
     "eslint-config-prettier": "9.1.0",
