--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "http-errors": "2.0.0",
     "joi": "17.13.3",
     "jsonwebtoken": "9.0.2",
+    "mongoose": "8.7.1",
     "morgan": "1.10.0",
     "uuid": "10.0.0",
     "winston": "3.15.0"
