--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "http-errors": "2.0.0",
     "joi": "17.13.3",
     "jsonwebtoken": "9.0.2",
+    "lodash.omit": "4.5.0",
     "mongoose": "8.7.1",
     "morgan": "1.10.0",
     "uuid": "10.0.0",
@@ -35,6 +36,7 @@
     "@types/express": "5.0.0",
     "@types/http-errors": "2.0.4",
     "@types/jsonwebtoken": "9.0.7",
+    "@types/lodash.omit": "4.5.9",
     "@types/morgan": "1.9.9",
     "@types/node": "22.7.5",
     "@types/uuid": "10.0.0",
