can invalidate tokens

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ REFRESH_TOKEN_SECRET=b9b1deb4dd8286c7e1fc7729be099ffa55785604303b7d4bad9bdd2b0d7
 SALT_ROUND=10
 DATABASE_URI=mongodb://localhost:27018
 DATABASE_NAME=StoreDB
+EXPIRY_ACCESS_TOKEN=30m
+EXPIRY_REFRESH_TOKEN=60m
