--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "http-errors": "2.0.0",
     "joi": "17.13.3",
     "jsonwebtoken": "9.0.2",
+    "lodash.isempty": "4.4.0",
     "lodash.omit": "4.5.0",
     "mongoose": "8.7.1",
     "morgan": "1.10.0",
@@ -37,6 +38,7 @@
     "@types/express": "5.0.0",
     "@types/http-errors": "2.0.4",
     "@types/jsonwebtoken": "9.0.7",
+    "@types/lodash.isempty": "4.4.9",
     "@types/lodash.omit": "4.5.9",
     "@types/morgan": "1.9.9",
     "@types/node": "22.7.5",
