--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,8 @@
       "request": "launch",
       "name": "Start server",
       "skipFiles": ["<node_internals>/**"],
-      "program": "${workspaceFolder}/src/app.ts",
+      "program": "../../../../.nvm/versions/node/v18.9.0/bin/yarn dev",
+      // "program": "${workspaceFolder}/src/app.ts",
       "outFiles": ["${workspaceFolder}/**/*.js"],
       "env": {
         "NODE_ENV": "dev",
