--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash.omit": "4.5.0",
     "mongoose": "8.7.1",
     "morgan": "1.10.0",
+    "short-unique-id": "5.2.0",
     "uuid": "10.0.0",
     "winston": "3.15.0"
   },
