--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "@types/lodash.omit": "4.5.9",
     "@types/morgan": "1.9.9",
     "@types/node": "22.7.5",
+    "@types/swagger-jsdoc": "6.0.4",
+    "@types/swagger-ui-express": "4.1.6",
     "@types/uuid": "10.0.0",
     "@typescript-eslint/eslint-plugin": "8.8.1",
     "eslint": "9.12.0",
@@ -50,6 +52,8 @@
     "eslint-plugin-prettier": "5.2.1",
     "nodemon": "3.1.7",
     "prettier": "3.3.3",
+    "swagger-jsdoc": "6.2.8",
+    "swagger-ui-express": "5.0.1",
     "ts-node": "10.9.2",
     "typescript": "5.6.2",
     "yarn-upgrade-all": "0.7.4"
