--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-async-errors": "3.1.1",
     "http-errors": "2.0.0",
     "joi": "17.13.3",
+    "js-yaml": "4.1.0",
     "jsonwebtoken": "9.0.2",
     "lodash.isempty": "4.4.0",
     "lodash.omit": "4.5.0",
@@ -38,6 +39,7 @@
     "@types/debug": "4.1.12",
     "@types/express": "5.0.0",
     "@types/http-errors": "2.0.4",
+    "@types/js-yaml": "4.0.9",
     "@types/jsonwebtoken": "9.0.7",
     "@types/lodash.isempty": "4.4.9",
     "@types/lodash.omit": "4.5.9",
@@ -46,6 +48,7 @@
     "@types/swagger-jsdoc": "6.0.4",
     "@types/swagger-ui-express": "4.1.6",
     "@types/uuid": "10.0.0",
+    "@types/yamljs": "0.2.34",
     "@typescript-eslint/eslint-plugin": "8.8.1",
     "eslint": "9.12.0",
     "eslint-config-prettier": "9.1.0",
@@ -56,6 +59,7 @@
     "swagger-ui-express": "5.0.1",
     "ts-node": "10.9.2",
     "typescript": "5.6.2",
+    "yamljs": "0.3.0",
     "yarn-upgrade-all": "0.7.4"
   }
 }
