--- a/swagger/routes/users.yaml
+++ b/swagger/routes/users.yaml
@@ -2,35 +2,8 @@ components:
   routes:
     GetAll:
       tags:
-        - Orders
-      summary: Get list of all orders
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  orders:
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/OrderDoc'
-        '400':
-          $ref: '#/components/errors/BadRequest'
-        '401':
-          $ref: '#/components/errors/Unauthorized'
-        '403':
-          $ref: '#/components/errors/Forbidden'
-        '404':
-          $ref: '#/components/errors/NotFound'
-        '500':
-          $ref: '#/components/errors/SthWentWrong'
-    GetUserOrders:
-      tags:
-        - Orders
         - Users
-      summary: Get all orders of the current connected user
+      summary: Get list of all users
       responses:
         '200':
           description: OK
@@ -39,10 +12,10 @@ components:
               schema:
                 type: object
                 properties:
-                  orders:
+                  users:
                     type: array
                     items:
-                      $ref: '#/components/schemas/OrderDoc'
+                      $ref: '#/components/schemas/UserDoc'
         '400':
           $ref: '#/components/errors/BadRequest'
         '401':
@@ -55,12 +28,12 @@ components:
           $ref: '#/components/errors/SthWentWrong'
     GetOne:
       tags:
-        - Orders
-      summary: Get one order by ID
+        - Users
+      summary: Get one user by ID
       parameters:
-        - name: orderId
+        - name: userId
           in: path
-          description: ID of the order
+          description: ID of the user
           required: true
           schema:
             type: string
@@ -72,8 +45,101 @@ components:
               schema:
                 type: object
                 properties:
-                  order:
-                    $ref: '#/components/schemas/OrderDetailsDoc'
+                  user:
+                    $ref: '#/components/schemas/UserDetailsDoc'
+        '400':
+          $ref: '#/components/errors/BadRequest'
+        '401':
+          $ref: '#/components/errors/Unauthorized'
+        '403':
+          $ref: '#/components/errors/Forbidden'
+        '404':
+          $ref: '#/components/errors/NotFound'
+        '500':
+          $ref: '#/components/errors/SthWentWrong'
+    Signup:
+      tags:
+        - Users
+        - Auth
+      summary: Create a user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                username:
+                  type: string
+                  description: "User's name"
+                  example: John
+                  minimum: 6
+                  required: true
+                email:
+                  type: string
+                  description: "User's email"
+                  example: johndoe@mail.com
+                  required: true
+                password:
+                  type: string
+                  description: "User's password"
+                  example: mlskdmqlksdmfl
+                  minimum: 6
+                  required: true
+                role:
+                  type: string
+                  description: "User's role"
+                  example: admin
+                  enum:
+                    - admin
+                    - user
+                  required: true
+      responses:
+        '201':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  userId:
+                    type: string
+                    description: ID of the newly created user
+                    example: 670f198f1fc4fdd76bd0AAAA
+        '400':
+          $ref: '#/components/errors/BadRequest'
+        '401':
+          $ref: '#/components/errors/Unauthorized'
+        '403':
+          $ref: '#/components/errors/Forbidden'
+        '404':
+          $ref: '#/components/errors/NotFound'
+        '500':
+          $ref: '#/components/errors/SthWentWrong'
+    InvalidateToken:
+      tags:
+        - Users
+        - Auth
+      summary: Allow an admin user to invalidate the token of a given user
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                userId:
+                  type: string
+                  description: ID of the user whose token will be invalidated
+                  example: 670f198f1fc4fdd76bd0AAAA
+                  required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
         '400':
           $ref: '#/components/errors/BadRequest'
         '401':
@@ -86,12 +152,12 @@ components:
           $ref: '#/components/errors/SthWentWrong'
     DeleteOne:
       tags:
-        - Orders
-      summary: Delete one order by ID
+        - Users
+      summary: Delete one user by ID
       parameters:
-        - name: orderId
+        - name: userId
           in: path
-          description: ID of the order to delete
+          description: ID of the user to delete
           required: true
           schema:
             type: string
@@ -114,12 +180,12 @@ components:
           $ref: '#/components/errors/SthWentWrong'
     EditOne:
       tags:
-        - Orders
-      summary: Edit one order by ID
+        - Users
+      summary: Edit one user by ID
       parameters:
-        - name: orderId
+        - name: userId
           in: path
-          description: ID of the order to update
+          description: ID of the user to update
           required: true
           schema:
             type: string
@@ -130,27 +196,24 @@ components:
             schema:
               type: object
               properties:
-                status:
+                username:
                   type: string
-                  description: New order status
-                  enum:
-                    - COMPLETED
-                  example: COMPLETED
-                items:
-                  type: array
-                  description: Items to order
-                  items:
-                    type: object
-                    properties:
-                      productId:
-                        type: string
-                        description: ID of product to order
-                        example: 670f198f1fc4fdd76bd0AAAA
-                      quantity:
-                        type: integer
-                        description: Amount of product to order
-                        minimum: 1
-                        example: 4
+                  description: "New user's name"
+                  example: John
+                email:
+                  type: string
+                  description: "New user's email"
+                  example: johndoe@mail.com
+                profile:
+                  type: object
+                  properties:
+                    role:
+                      type: string
+                      description: "New user's role"
+                      example: user
+                      enum:
+                        - user
+                        - admin
       responses:
         '200':
           description: OK
@@ -158,54 +221,6 @@ components:
             application/json:
               schema:
                 type: object
-        '400':
-          $ref: '#/components/errors/BadRequest'
-        '401':
-          $ref: '#/components/errors/Unauthorized'
-        '403':
-          $ref: '#/components/errors/Forbidden'
-        '404':
-          $ref: '#/components/errors/NotFound'
-        '500':
-          $ref: '#/components/errors/SthWentWrong'
-    Add:
-      tags:
-        - Orders
-      summary: Order product(s)
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                items:
-                  type: array
-                  description: Items to order
-                  items:
-                    type: object
-                    properties:
-                      productId:
-                        type: string
-                        description: ID of product to order
-                        example: 670f198f1fc4fdd76bd0AAAA
-                      quantity:
-                        type: integer
-                        description: Amount of product to order
-                        minimum: 1
-                        example: 4
-      responses:
-        '201':
-          description: OK
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  orderId:
-                    type: string
-                    description: ID of the newly created order
-                    example: 670f198f1fc4fdd76bd0AAAA
         '400':
           $ref: '#/components/errors/BadRequest'
         '401':
