--- a/swagger/routes/auth.yaml
+++ b/swagger/routes/auth.yaml
@@ -1,6 +1,8 @@
 components:
   routes:
     Login:
+      tags:
+        - Auth
       summary: Login and get back access and refresh tokens
       requestBody:
         required: true
@@ -47,6 +49,8 @@ components:
         '500':
           $ref: '#/components/errors/SthWentWrong'
     RefreshToken:
+      tags:
+        - Auth
       summary: Refresh your expired access token
       requestBody:
         required: true
