--- a/swagger/routes/products.yaml
+++ b/swagger/routes/products.yaml
@@ -1,6 +1,8 @@
 components:
   routes:
     GetAll:
+      tags:
+        - Products
       summary: Get list of all products
       responses:
         '200':
@@ -25,6 +27,8 @@ components:
         '500':
           $ref: '#/components/errors/SthWentWrong'
     GetOne:
+      tags:
+        - Products
       summary: Get one product by ID
       parameters:
         - name: productId
@@ -54,6 +58,8 @@ components:
         '500':
           $ref: '#/components/errors/SthWentWrong'
     DeleteOne:
+      tags:
+        - Products
       summary: Delete one product by ID
       parameters:
         - name: productId
@@ -80,6 +86,8 @@ components:
         '500':
           $ref: '#/components/errors/SthWentWrong'
     EditOne:
+      tags:
+        - Products
       summary: Edit one product by ID
       parameters:
         - name: productId
