--- a/swagger/routes/reviews.yaml
+++ b/swagger/routes/reviews.yaml
@@ -1,6 +1,8 @@
 components:
   routes:
     GetAll:
+      tags:
+        - Reviews
       summary: Get list of all reviews
       responses:
         '200':
@@ -25,6 +27,9 @@ components:
         '500':
           $ref: '#/components/errors/SthWentWrong'
     GetProductReviews:
+      tags:
+        - Reviews
+        - Products
       summary: Get all reviews of a given product
       parameters:
         - name: productId
@@ -56,6 +61,8 @@ components:
         '500':
           $ref: '#/components/errors/SthWentWrong'
     GetOne:
+      tags:
+        - Reviews
       summary: Get one review by ID
       parameters:
         - name: reviewId
@@ -85,6 +92,8 @@ components:
         '500':
           $ref: '#/components/errors/SthWentWrong'
     DeleteOne:
+      tags:
+        - Reviews
       summary: Delete one review by ID
       parameters:
         - name: reviewId
@@ -111,6 +120,8 @@ components:
         '500':
           $ref: '#/components/errors/SthWentWrong'
     EditOne:
+      tags:
+        - Reviews
       summary: Edit one review by ID
       parameters:
         - name: reviewId
@@ -160,6 +171,8 @@ components:
         '500':
           $ref: '#/components/errors/SthWentWrong'
     Add:
+      tags:
+        - Reviews
       summary: Add a review to a product
       requestBody:
         required: true
