starting testing setup

--- a/.env
+++ b/.env
@@ -5,5 +5,7 @@ REFRESH_TOKEN_SECRET=b9b1deb4dd8286c7e1fc7729be099ffa55785604303b7d4bad9bdd2b0d7
 SALT_ROUND=10
 DATABASE_URI=mongodb://127.0.0.1:27018
 DATABASE_NAME=StoreDB
+DATABASE_TEST_NAME=StoreDB-UNIT-TEST
 EXPIRY_ACCESS_TOKEN=30m
 EXPIRY_REFRESH_TOKEN=60m
+TEST_ENABLED=true
