--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "node": "18"
   },
   "scripts": {
-    "start": "node ./dist/app.js",
-    "dev": "nodemon src/app.ts",
+    "start": "node ./dist/index.js",
+    "dev": "nodemon src/index.ts",
     "build": "tsc -p .",
     "prettier": "prettier --write src/**/*.ts",
     "lint": "npm run prettier && eslint src/**/*.ts"
