--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "node": "18"
   },
   "scripts": {
-    "start": "node ./dist/index.js",
+    "start": "node ./dist/src/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc -p .",
+    "copyFiles": "copy-files-from-to",
+    "build:clean": "rimraf ./dist --glob",
+    "build": "yarn build:clean && tsc -p .",
+    "start:test-server": "yarn build && yarn copyFiles && yarn start",
+    "test": "cross-env TS_NODE_PROJECT='./tsconfig.json' mocha -r ts-node/register 'tests/**/*.spec.ts'",
+    "test2": "mocha './dist/tests/**/*.js'",
     "prettier": "prettier --write src/**/*.ts",
     "lint": "npm run prettier && eslint src/**/*.ts"
   },
@@ -35,6 +40,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "5.0.2",
+    "@types/chai": "5.0.1",
     "@types/cookie-parser": "1.4.7",
     "@types/debug": "4.1.12",
     "@types/express": "5.0.0",
@@ -43,18 +49,28 @@
     "@types/jsonwebtoken": "9.0.7",
     "@types/lodash.isempty": "4.4.9",
     "@types/lodash.omit": "4.5.9",
+    "@types/mocha": "10.0.9",
     "@types/morgan": "1.9.9",
     "@types/node": "22.7.5",
+    "@types/supertest": "6.0.2",
     "@types/swagger-jsdoc": "6.0.4",
     "@types/swagger-ui-express": "4.1.6",
     "@types/uuid": "10.0.0",
     "@types/yamljs": "0.2.34",
     "@typescript-eslint/eslint-plugin": "8.8.1",
+    "chai": "5.1.2",
+    "copy-files-from-to": "3.11.0",
+    "cross-env": "^7.0.3",
     "eslint": "9.12.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
+    "jsdom": "^25.0.1",
+    "jsdom-global": "^3.0.2",
+    "mocha": "10.8.2",
     "nodemon": "3.1.7",
     "prettier": "3.3.3",
+    "rimraf": "6.0.1",
+    "supertest": "7.0.0",
     "swagger-jsdoc": "6.2.8",
     "swagger-ui-express": "5.0.1",
     "ts-node": "10.9.2",
