--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:clean": "rimraf ./dist --glob",
     "build": "yarn build:clean && tsc -p .",
     "start:test-server": "yarn build && yarn copyFiles && yarn start",
-    "test": "cross-env TS_NODE_PROJECT='./tsconfig.test.json' mocha --file 'tests/index.ts' --require ts-node/register 'tests/**/*.spec.ts'",
+    "test": "cross-env TS_NODE_PROJECT='./tsconfig.test.json' mocha --file 'tests/index.ts' --require ts-node/register 'tests/**/*.spec.ts' --exit",
     "test2": "mocha './dist/tests/**/*.js'",
     "prettier": "prettier --write src/**/*.ts",
     "lint": "npm run prettier && eslint src/**/*.ts"
@@ -60,16 +60,17 @@
     "@typescript-eslint/eslint-plugin": "8.8.1",
     "chai": "5.1.2",
     "copy-files-from-to": "3.11.0",
-    "cross-env": "^7.0.3",
+    "cross-env": "7.0.3",
     "eslint": "9.12.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
-    "jsdom": "^25.0.1",
-    "jsdom-global": "^3.0.2",
+    "jsdom": "25.0.1",
+    "jsdom-global": "3.0.2",
     "mocha": "10.8.2",
     "nodemon": "3.1.7",
     "prettier": "3.3.3",
     "rimraf": "6.0.1",
+    "should": "13.2.3",
     "supertest": "7.0.0",
     "swagger-jsdoc": "6.2.8",
     "swagger-ui-express": "5.0.1",
