Done with the project

--- a/.env
+++ b/.env
@@ -8,4 +8,4 @@ DATABASE_NAME=StoreDB
 DATABASE_TEST_NAME=StoreDB-UNIT-TEST
 EXPIRY_ACCESS_TOKEN=30m
 EXPIRY_REFRESH_TOKEN=60m
-TEST_ENABLED=true
+TEST_ENABLED=false
