--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Data exchange service rest api",
   "main": "index.js",
   "engines": {
-    "node": "18"
+    "node": "18.x",
+    "yarn": "1.22.x"
   },
   "scripts": {
     "start": "node ./dist/src/index.js",
