--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv": "16.4.5",
     "express": "4.21.0",
     "express-async-errors": "3.1.1",
+    "express-rate-limit": "7.4.1",
     "http-errors": "2.0.0",
     "joi": "17.13.3",
     "js-yaml": "4.1.0",
