add load testing

--- a/.env
+++ b/.env
@@ -6,6 +6,8 @@ SALT_ROUND=10
 DATABASE_URI=mongodb://127.0.0.1:27018
 DATABASE_NAME=StoreDB
 DATABASE_TEST_NAME=StoreDB-UNIT-TEST
+DATABASE_LOAD_TEST_NAME=StoreDB-LOAD_TEST
 EXPIRY_ACCESS_TOKEN=30m
 EXPIRY_REFRESH_TOKEN=60m
 TEST_ENABLED=true
+LOAD_TEST_ENABLED=true
