--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "node ./dist/src/index.js",
     "dev": "nodemon src/index.ts",
+    "workers": "nodemon src/workers.ts",
     "copyFiles": "copy-files-from-to",
     "build:clean": "rimraf ./dist --glob",
     "build": "yarn build:clean && tsc -p .",
@@ -28,6 +29,7 @@
     "express": "4.21.0",
     "express-async-errors": "3.1.1",
     "express-rate-limit": "7.4.1",
+    "global": "^4.4.0",
     "http-errors": "2.0.0",
     "joi": "17.13.3",
     "js-yaml": "4.1.0",
