Refactoring test configs

--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@ DATABASE_LOAD_TEST_NAME=StoreDB-LOAD_TEST
 EXPIRY_ACCESS_TOKEN=30m
 EXPIRY_REFRESH_TOKEN=60m
 TEST_ENABLED=true
-LOAD_TEST_ENABLED=true
+LOAD_TEST_ENABLED=false
