--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "build:clean": "rimraf ./dist --glob",
     "build": "yarn build:clean && tsc -p .",
     "start:test-server": "yarn build && yarn copyFiles && yarn start",
-    "test:units": "cross-env TS_NODE_PROJECT='./tsconfig.test.json' mocha --recursive --file 'tests/index.ts' --require ts-node/register 'tests/units/*.spec.ts' --exit",
-    "test:e2e": "cross-env TS_NODE_PROJECT='./tsconfig.test.json' mocha --recursive --file 'tests/index.ts' --require ts-node/register './tests/e2e/*.spec.ts' --exit",
+    "test:units": "cross-env TS_NODE_PROJECT='./tsconfig.test.json' mocha",
+    "test:e2e": "cross-env TS_NODE_PROJECT='./e2e/tsconfig.json' mocha --config 'e2e/.mocharc.json'",
     "prettier": "prettier --write src/**/*.ts",
     "lint": "npm run prettier && eslint src/**/*.ts"
   },
