--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build:clean": "rimraf ./dist --glob",
     "build": "yarn build:clean && tsc -p .",
     "start:test-server": "yarn build && yarn copyFiles && yarn start",
-    "test:units": "cross-env TS_NODE_PROJECT='./tsconfig.test.json' mocha",
+    "test:units": "jest",
+    "test:integration": "cross-env TS_NODE_PROJECT='tests/tsconfig.json' mocha",
     "test:e2e": "cross-env TS_NODE_PROJECT='./e2e/tsconfig.json' mocha --config 'e2e/.mocharc.json'",
     "prettier": "prettier --write src/**/*.ts",
     "lint": "npm run prettier && eslint src/**/*.ts"
@@ -29,7 +30,7 @@
     "express": "4.21.0",
     "express-async-errors": "3.1.1",
     "express-rate-limit": "7.4.1",
-    "global": "^4.4.0",
+    "global": "4.4.0",
     "http-errors": "2.0.0",
     "joi": "17.13.3",
     "js-yaml": "4.1.0",
@@ -43,12 +44,16 @@
     "winston": "3.15.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
+    "@jest/globals": "^29.7.0",
     "@types/bcrypt": "5.0.2",
     "@types/chai": "5.0.1",
     "@types/cookie-parser": "1.4.7",
     "@types/debug": "4.1.12",
     "@types/express": "5.0.0",
     "@types/http-errors": "2.0.4",
+    "@types/jest": "^29.5.14",
     "@types/js-yaml": "4.0.9",
     "@types/jsonwebtoken": "9.0.7",
     "@types/lodash.isempty": "4.4.9",
@@ -56,6 +61,8 @@
     "@types/mocha": "10.0.9",
     "@types/morgan": "1.9.9",
     "@types/node": "22.7.5",
+    "@types/sinon": "17.0.3",
+    "@types/sinon-chai": "4.0.0",
     "@types/supertest": "6.0.2",
     "@types/swagger-jsdoc": "6.0.4",
     "@types/swagger-ui-express": "4.1.6",
@@ -68,6 +75,7 @@
     "eslint": "9.12.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
+    "jest": "^29.7.0",
     "jsdom": "25.0.1",
     "jsdom-global": "3.0.2",
     "mocha": "10.8.2",
@@ -75,9 +83,13 @@
     "prettier": "3.3.3",
     "rimraf": "6.0.1",
     "should": "13.2.3",
+    "should-sinon": "^0.0.6",
+    "sinon": "19.0.2",
+    "sinon-chai": "4.0.0",
     "supertest": "7.0.0",
     "swagger-jsdoc": "6.2.8",
     "swagger-ui-express": "5.0.1",
+    "ts-jest": "^29.2.5",
     "ts-node": "10.9.2",
     "typescript": "5.6.2",
     "yamljs": "0.3.0",
