--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build:clean": "rimraf ./dist --glob",
     "build": "yarn build:clean && tsc -p .",
     "start:test-server": "yarn build && yarn copyFiles && yarn start",
-    "test:units": "jest",
+    "test:units": "jest --detectOpenHandles",
     "test:integration": "cross-env TS_NODE_PROJECT='tests/tsconfig.json' mocha",
     "test:e2e": "cross-env TS_NODE_PROJECT='./e2e/tsconfig.json' mocha --config 'e2e/.mocharc.json'",
     "prettier": "prettier --write src/**/*.ts",
