--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "8.37.1",
+    "@sentry/profiling-node": "8.37.1",
     "bcrypt": "5.1.1",
     "cookie-parser": "1.4.6",
     "dotenv": "16.4.5",
@@ -44,16 +46,16 @@
     "winston": "3.15.0"
   },
   "devDependencies": {
-    "@babel/preset-env": "^7.26.0",
-    "@babel/preset-typescript": "^7.26.0",
-    "@jest/globals": "^29.7.0",
+    "@babel/preset-env": "7.26.0",
+    "@babel/preset-typescript": "7.26.0",
+    "@jest/globals": "29.7.0",
     "@types/bcrypt": "5.0.2",
     "@types/chai": "5.0.1",
     "@types/cookie-parser": "1.4.7",
     "@types/debug": "4.1.12",
     "@types/express": "5.0.0",
     "@types/http-errors": "2.0.4",
-    "@types/jest": "^29.5.14",
+    "@types/jest": "29.5.14",
     "@types/js-yaml": "4.0.9",
     "@types/jsonwebtoken": "9.0.7",
     "@types/lodash.isempty": "4.4.9",
@@ -75,7 +77,7 @@
     "eslint": "9.12.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
-    "jest": "^29.7.0",
+    "jest": "29.7.0",
     "jsdom": "25.0.1",
     "jsdom-global": "3.0.2",
     "mocha": "10.8.2",
@@ -83,13 +85,13 @@
     "prettier": "3.3.3",
     "rimraf": "6.0.1",
     "should": "13.2.3",
-    "should-sinon": "^0.0.6",
+    "should-sinon": "0.0.6",
     "sinon": "19.0.2",
     "sinon-chai": "4.0.0",
     "supertest": "7.0.0",
     "swagger-jsdoc": "6.2.8",
     "swagger-ui-express": "5.0.1",
-    "ts-jest": "^29.2.5",
+    "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
     "typescript": "5.6.2",
     "yamljs": "0.3.0",
