--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
     "baseUrl": "."
   },
   "exclude": ["node_modules", "mocks", ".vscode"],
-  "include": ["./src/**/*.ts", "./swagger/**/*.ts", "tests/**/*.ts"]
+  "include": ["./src/**/*.ts", "./swagger/**/*.ts", "tests/**/*.ts", "private/**/*.ts"]
 }
