refactoring unit, integration and e2e tests

--- a/.env
+++ b/.env
@@ -9,5 +9,5 @@ DATABASE_TEST_NAME=StoreDB-UNIT-TEST
 DATABASE_LOAD_TEST_NAME=StoreDB-LOAD_TEST
 EXPIRY_ACCESS_TOKEN=30m
 EXPIRY_REFRESH_TOKEN=60m
-TEST_ENABLED=false
-LOAD_TEST_ENABLED=false
+TEST_ENABLED=true
+LOAD_TEST_ENABLED=true
