--- a/e2e/.mocharc.json
+++ b/e2e/.mocharc.json
@@ -1,8 +1,9 @@
 {
   "extension": ["ts"],
-  "spec": "e2e/*.spec.ts",
+  "spec": "e2e/specs/full-flows.spec.ts",
   "require": ["ts-node/register"],
-  "recursive": true,
-  "file": "tests/index.ts",
-  "exit": "true"
+  "recursive": false,
+  "file": "e2e/index.ts",
+  "exit": "true",
+  "fgrep": "E2E"
 }
